// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Test List Item Components - Experimental Enabled  ListItemAction Snapshot 1`] = `
<View
  accessibilityLabel="accessibilityLabel"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onTouchEnd={[Function]}
>
  <View
    accessibilityElementsHidden={true}
    collapsable={false}
    importantForAccessibility="no-hide-descendants"
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {
          "backgroundColor": "rgba(244, 245, 248, 0)",
        },
      }
    }
    jestInlineStyle={
      [
        {
          "marginHorizontal": -24,
          "paddingHorizontal": 24,
          "paddingVertical": 12,
        },
      ]
    }
    style={
      [
        {
          "marginHorizontal": -24,
          "paddingHorizontal": 24,
          "paddingVertical": 12,
        },
        {
          "backgroundColor": "rgba(244, 245, 248, 0)",
        },
      ]
    }
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        }
      }
      jestInlineStyle={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
          {
            "columnGap": 12,
          },
        ]
      }
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
          {
            "columnGap": 12,
          },
          {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <View
        style={
          {
            "flexGrow": 1,
            "flexShrink": 1,
          }
        }
      >
        <Text
          allowFontScaling={true}
          maxFontSizeMultiplier={1.5}
          style={
            [
              {},
              {
                "color": "#0B3EE3",
                "fontFamily": "Titillio",
                "fontSize": 16,
                "fontStyle": "normal",
                "fontWeight": "600",
                "lineHeight": 20,
              },
            ]
          }
        >
          label
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Test List Item Components - Experimental Enabled  ListItemInfo Snapshot 1`] = `
<View
  accessibilityLabel="accessibilityLabel"
  accessible={true}
  style={
    {
      "marginHorizontal": -24,
      "paddingHorizontal": 24,
      "paddingVertical": 12,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        },
        {
          "columnGap": 12,
        },
      ]
    }
  >
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        accessible={false}
        importantForAccessibility="no-hide-descendants"
        style={
          {
            "flexDirection": "column",
          }
        }
      >
        <Text
          allowFontScaling={true}
          dynamicTypeRamp="footnote"
          maxFontSizeMultiplier={1.5}
          style={
            [
              {},
              {
                "color": "#555C70",
                "fontFamily": "Titillio",
                "fontSize": 14,
                "fontStyle": "normal",
                "fontWeight": "400",
                "lineHeight": 21,
              },
            ]
          }
        >
          label
        </Text>
        <Text
          allowFontScaling={true}
          dynamicTypeRamp="headline"
          maxFontSizeMultiplier={1.5}
          numberOfLines={2}
          style={
            [
              {},
              {
                "color": "#0E0F13",
                "fontFamily": "Titillio",
                "fontSize": 16,
                "fontStyle": "normal",
                "fontWeight": "600",
                "lineHeight": 24,
              },
            ]
          }
        >
          testValue
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Test List Item Components - Experimental Enabled  ListItemInfoCopy Snapshot 1`] = `
<View
  accessibilityLabel="accessibilityLabel"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onTouchEnd={[Function]}
>
  <View
    accessibilityElementsHidden={true}
    collapsable={false}
    importantForAccessibility="no-hide-descendants"
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {
          "backgroundColor": "rgba(244, 245, 248, 0)",
        },
      }
    }
    jestInlineStyle={
      [
        {
          "marginHorizontal": -24,
          "paddingHorizontal": 24,
          "paddingVertical": 12,
        },
      ]
    }
    style={
      [
        {
          "marginHorizontal": -24,
          "paddingHorizontal": 24,
          "paddingVertical": 12,
        },
        {
          "backgroundColor": "rgba(244, 245, 248, 0)",
        },
      ]
    }
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        }
      }
      jestInlineStyle={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
          {
            "columnGap": 12,
          },
        ]
      }
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
          {
            "columnGap": 12,
          },
          {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <Text
          allowFontScaling={true}
          dynamicTypeRamp="footnote"
          maxFontSizeMultiplier={1.5}
          style={
            [
              {},
              {
                "color": "#555C70",
                "fontFamily": "Titillio",
                "fontSize": 14,
                "fontStyle": "normal",
                "fontWeight": "400",
                "lineHeight": 21,
              },
            ]
          }
        >
          label
        </Text>
        <Text
          allowFontScaling={true}
          dynamicTypeRamp="headline"
          maxFontSizeMultiplier={1.5}
          numberOfLines={2}
          style={
            [
              {},
              {
                "color": "#0B3EE3",
                "fontFamily": "Titillio",
                "fontSize": 16,
                "fontStyle": "normal",
                "fontWeight": "600",
                "lineHeight": 24,
              },
            ]
          }
        >
          testValue
        </Text>
      </View>
      <RNSVGSvgView
        accessibilityElementsHidden={true}
        accessibilityLabel=""
        accessible={false}
        align="xMidYMid"
        bbHeight={24}
        bbWidth={24}
        color="#0B3EE3"
        focusable={false}
        height={24}
        importantForAccessibility="no-hide-descendants"
        meetOrSlice={0}
        minX={0}
        minY={0}
        pointerEvents="none"
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 24,
              "width": 24,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width={24}
      >
        <RNSVGGroup
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
        >
          <RNSVGPath
            clipRule={0}
            d="M12 18h8a2 2 0 0 0 2-2V9h-4a3 3 0 0 1-3-3V2h-3a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2Zm9.332-11.987a2 2 0 0 1 .603.987H18a1 1 0 0 1-1-1V2.227a2 2 0 0 1 .406.281l3.926 3.505ZM14 20h-2a4 4 0 0 1-4-4V6H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2Zm2 0h4a4 4 0 0 0 4-4V7.505a4 4 0 0 0-1.336-2.984l-3.926-3.505A4 4 0 0 0 16.074 0H12a4 4 0 0 0-4 4H4a4 4 0 0 0-4 4v12a4 4 0 0 0 4 4h8a4 4 0 0 0 4-4Z"
            fill={
              {
                "type": 2,
              }
            }
            fillRule={0}
            propList={
              [
                "fill",
                "fillRule",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</View>
`;

exports[`Test List Item Components - Experimental Enabled  ListItemNav Snapshot 1`] = `
<View
  accessibilityLabel="accessibilityLabel"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onTouchEnd={[Function]}
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {
          "backgroundColor": "rgba(244, 245, 248, 0)",
        },
      }
    }
    jestInlineStyle={
      [
        {
          "marginHorizontal": -24,
          "paddingHorizontal": 24,
          "paddingVertical": 12,
        },
      ]
    }
    style={
      [
        {
          "marginHorizontal": -24,
          "paddingHorizontal": 24,
          "paddingVertical": 12,
        },
        {
          "backgroundColor": "rgba(244, 245, 248, 0)",
        },
      ]
    }
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        }
      }
      jestInlineStyle={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
        ]
      }
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
          {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <View
        style={
          {
            "flexGrow": 1,
            "flexShrink": 1,
          }
        }
      >
        <Text
          allowFontScaling={true}
          dynamicTypeRamp="headline"
          maxFontSizeMultiplier={1.5}
          style={
            [
              {},
              {
                "color": "#0E0F13",
                "fontFamily": "Titillio",
                "fontSize": 16,
                "fontStyle": "normal",
                "fontWeight": "600",
                "lineHeight": 24,
              },
            ]
          }
        >
          testValue
        </Text>
      </View>
      <RNSVGSvgView
        accessibilityElementsHidden={true}
        accessibilityLabel=""
        accessible={false}
        align="xMidYMid"
        bbHeight={24}
        bbWidth={24}
        color="#0B3EE3"
        focusable={false}
        height={24}
        importantForAccessibility="no-hide-descendants"
        meetOrSlice={0}
        minX={0}
        minY={0}
        pointerEvents="none"
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 24,
              "width": 24,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width={24}
      >
        <RNSVGGroup
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
        >
          <RNSVGPath
            clipRule={0}
            d="M16.2929 5.29289c.3905-.39052 1.0237-.39052 1.4142 0l6 6.00001c.3905.3905.3905 1.0237 0 1.4142l-6 6c-.3905.3905-1.0237.3905-1.4142 0-.3905-.3905-.3905-1.0237 0-1.4142L21.5858 12l-5.2929-5.29289c-.3905-.39053-.3905-1.02369 0-1.41422Z"
            fill={
              {
                "type": 2,
              }
            }
            fillRule={0}
            propList={
              [
                "fill",
                "fillRule",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</View>
`;

exports[`Test List Item Components - Experimental Enabled  ListItemNavAlert Snapshot 1`] = `
<View
  accessibilityLabel="accessibilityLabel"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onTouchEnd={[Function]}
>
  <View
    accessibilityElementsHidden={true}
    collapsable={false}
    importantForAccessibility="no-hide-descendants"
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {
          "backgroundColor": "rgba(244, 245, 248, 0)",
        },
      }
    }
    jestInlineStyle={
      [
        {
          "marginHorizontal": -24,
          "paddingHorizontal": 24,
          "paddingVertical": 12,
        },
      ]
    }
    style={
      [
        {
          "marginHorizontal": -24,
          "paddingHorizontal": 24,
          "paddingVertical": 12,
        },
        {
          "backgroundColor": "rgba(244, 245, 248, 0)",
        },
      ]
    }
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        }
      }
      jestInlineStyle={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
          {
            "columnGap": 12,
          },
        ]
      }
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
          {
            "columnGap": 12,
          },
          {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <RNSVGSvgView
        accessibilityElementsHidden={true}
        accessibilityLabel=""
        accessible={false}
        align="xMidYMid"
        bbHeight={24}
        bbWidth={24}
        color="#D13333"
        focusable={false}
        height={24}
        importantForAccessibility="no-hide-descendants"
        meetOrSlice={0}
        minX={0}
        minY={0}
        pointerEvents="none"
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 24,
              "width": 24,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width={24}
      >
        <RNSVGGroup
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
        >
          <RNSVGPath
            clipRule={0}
            d="M7.00702 1c-.73494 0-1.41405.39209-1.78152 1.02856L.2756 11.0274c-.36747.6365-.36747 1.4206 0 2.0571l4.9499 8.8783c.36747.6365 1.04658 1.0286 1.78152 1.0286h9.94288c.7349 0 1.414-.3921 1.7815-1.0286l4.993-8.8783c.3675-.6365.3675-1.4206 0-2.0571l-4.993-8.99884C18.3639 1.39209 17.6848 1 16.9499 1H7.00702Zm5.02608 13.5549c.5676 0 1.0283-.4601 1.0283-1.0277V5.52583c0-.56758-.4601-1.02769-1.0277-1.02769-.5676 0-1.0282.46011-1.0282 1.02769v8.00137c0 .5676.4601 1.0277 1.0276 1.0277Zm0 1.9431c.8436 0 1.5275.6839 1.5275 1.5275 0 .8436-.6839 1.5275-1.5275 1.5275-.8436 0-1.5274-.6839-1.5274-1.5275 0-.8436.6838-1.5275 1.5274-1.5275Z"
            fill={
              {
                "type": 2,
              }
            }
            fillRule={0}
            propList={
              [
                "fill",
                "fillRule",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <Text
          allowFontScaling={true}
          dynamicTypeRamp="headline"
          maxFontSizeMultiplier={1.5}
          style={
            [
              {},
              {
                "color": "#0E0F13",
                "fontFamily": "Titillio",
                "fontSize": 16,
                "fontStyle": "normal",
                "fontWeight": "600",
                "lineHeight": 24,
              },
            ]
          }
        >
          testValue
        </Text>
      </View>
      <RNSVGSvgView
        accessibilityElementsHidden={true}
        accessibilityLabel=""
        accessible={false}
        align="xMidYMid"
        bbHeight={24}
        bbWidth={24}
        color="#0B3EE3"
        focusable={false}
        height={24}
        importantForAccessibility="no-hide-descendants"
        meetOrSlice={0}
        minX={0}
        minY={0}
        pointerEvents="none"
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 24,
              "width": 24,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width={24}
      >
        <RNSVGGroup
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
        >
          <RNSVGPath
            clipRule={0}
            d="M16.2929 5.29289c.3905-.39052 1.0237-.39052 1.4142 0l6 6.00001c.3905.3905.3905 1.0237 0 1.4142l-6 6c-.3905.3905-1.0237.3905-1.4142 0-.3905-.3905-.3905-1.0237 0-1.4142L21.5858 12l-5.2929-5.29289c-.3905-.39053-.3905-1.02369 0-1.41422Z"
            fill={
              {
                "type": 2,
              }
            }
            fillRule={0}
            propList={
              [
                "fill",
                "fillRule",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</View>
`;

exports[`Test List Item Components - Experimental Enabled  ListItemRadioWithAmount Snapshot 1`] = `
<View
  accessibilityLabel="label € 1.000,00 suggestReason"
  accessibilityRole="radio"
  accessibilityState={
    {
      "busy": undefined,
      "checked": true,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onTouchEnd={[Function]}
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {
          "backgroundColor": "rgba(244, 245, 248, 0)",
        },
      }
    }
    jestInlineStyle={
      [
        {
          "marginHorizontal": -24,
          "paddingHorizontal": 24,
          "paddingVertical": 12,
        },
      ]
    }
    style={
      [
        {
          "marginHorizontal": -24,
          "paddingHorizontal": 24,
          "paddingVertical": 12,
        },
        {
          "backgroundColor": "rgba(244, 245, 248, 0)",
        },
      ]
    }
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        }
      }
      jestInlineStyle={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
          {
            "columnGap": 12,
          },
        ]
      }
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
          {
            "columnGap": 12,
          },
          {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <View
        style={
          {
            "flexShrink": 1,
          }
        }
      >
        <Text
          allowFontScaling={true}
          dynamicTypeRamp="headline"
          maxFontSizeMultiplier={1.5}
          numberOfLines={1}
          style={
            [
              {},
              {
                "color": "#0E0F13",
                "fontFamily": "Titillio",
                "fontSize": 16,
                "fontStyle": "normal",
                "fontWeight": "600",
                "lineHeight": 24,
              },
            ]
          }
        >
          label
        </Text>
        <View
          style={
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "gap": 4,
            }
          }
        >
          <RNSVGSvgView
            accessibilityElementsHidden={true}
            accessibilityLabel=""
            accessible={false}
            align="xMidYMid"
            bbHeight={16}
            bbWidth={16}
            color="#5517E3"
            focusable={false}
            height={16}
            importantForAccessibility="no-hide-descendants"
            meetOrSlice={0}
            minX={0}
            minY={0}
            pointerEvents="none"
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                {
                  "flex": 0,
                  "height": 16,
                  "width": 16,
                },
              ]
            }
            vbHeight={24}
            vbWidth={24}
            width={16}
          >
            <RNSVGGroup
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGPath
                d="m15.694 7.56-2.296-.656a6.276 6.276 0 0 1-4.337-4.337L8.405.271a.438.438 0 0 0-.81 0l-.656 2.296a6.276 6.276 0 0 1-4.337 4.337L.306 7.56a.421.421 0 0 0 0 .81l2.296.656a6.276 6.276 0 0 1 4.337 4.338l.656 2.295a.42.42 0 0 0 .81 0l.656-2.295a6.276 6.276 0 0 1 4.338-4.338l2.295-.656a.421.421 0 0 0 0-.81ZM23.809 18.719l-1.435-.41a3.922 3.922 0 0 1-2.71-2.711l-.41-1.435a.273.273 0 0 0-.507 0l-.41 1.435a3.923 3.923 0 0 1-2.711 2.71l-1.435.41a.263.263 0 0 0 0 .507l1.435.41a3.922 3.922 0 0 1 2.71 2.711l.41 1.435a.263.263 0 0 0 .507 0l.41-1.435a3.923 3.923 0 0 1 2.711-2.71l1.435-.41a.263.263 0 0 0 0-.507Z"
                fill={
                  {
                    "type": 2,
                  }
                }
                propList={
                  [
                    "fill",
                  ]
                }
              />
            </RNSVGGroup>
          </RNSVGSvgView>
          <Text
            allowFontScaling={true}
            dynamicTypeRamp="footnote"
            maxFontSizeMultiplier={1.5}
            style={
              [
                {},
                {
                  "color": "#5517E3",
                  "fontFamily": "Titillio",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "lineHeight": 21,
                },
              ]
            }
          >
            suggestReason
          </Text>
        </View>
      </View>
      <View
        accessibilityElementsHidden={true}
        importantForAccessibility="no-hide-descendants"
        pointerEvents="none"
        style={
          {
            "display": "flex",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <Text
          allowFontScaling={true}
          dynamicTypeRamp="headline"
          maxFontSizeMultiplier={1.5}
          style={
            [
              {},
              {
                "color": "#0B3EE3",
                "fontFamily": "Titillio",
                "fontSize": 16,
                "fontStyle": "normal",
                "fontWeight": "600",
                "lineHeight": 24,
              },
            ]
          }
        >
          € 1.000,00
        </Text>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={false}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "height": 24,
              "width": 24,
            }
          }
          testID="AnimatedRadioInput"
        >
          <View
            style={
              [
                {
                  "borderWidth": 2,
                  "left": 0,
                  "position": "absolute",
                  "top": 0,
                },
                {
                  "borderRadius": 12,
                  "height": 24,
                  "width": 24,
                },
                {
                  "borderColor": "#636B82",
                },
              ]
            }
          />
          <View
            collapsable={false}
            jestAnimatedProps={
              {
                "value": {},
              }
            }
            jestAnimatedStyle={
              {
                "value": {
                  "opacity": 1,
                  "transform": [
                    {
                      "scale": 1,
                    },
                  ],
                },
              }
            }
            jestInlineStyle={
              [
                {
                  "left": 0,
                  "position": "absolute",
                  "top": 0,
                },
                {
                  "borderRadius": 12,
                  "height": 24,
                  "width": 24,
                },
                {
                  "backgroundColor": "#0B3EE3",
                },
              ]
            }
            style={
              [
                {
                  "left": 0,
                  "position": "absolute",
                  "top": 0,
                },
                {
                  "borderRadius": 12,
                  "height": 24,
                  "width": 24,
                },
                {
                  "backgroundColor": "#0B3EE3",
                },
                {
                  "opacity": 1,
                  "transform": [
                    {
                      "scale": 1,
                    },
                  ],
                },
              ]
            }
          />
          <View>
            <RNSVGSvgView
              align="xMidYMid"
              bbHeight={24}
              bbWidth={24}
              focusable={false}
              height={24}
              meetOrSlice={0}
              minX={0}
              minY={0}
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  {
                    "flex": 0,
                    "height": 24,
                    "width": 24,
                  },
                ]
              }
              vbHeight={24}
              vbWidth={24}
              width={24}
            >
              <RNSVGGroup
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
              >
                <RNSVGPath
                  d="m7 12 4 4 7-7"
                  fill={null}
                  onSvgLayout={[Function]}
                  propList={
                    [
                      "fill",
                      "stroke",
                      "strokeWidth",
                      "strokeDasharray",
                      "strokeDashoffset",
                      "strokeLinecap",
                      "strokeLinejoin",
                    ]
                  }
                  stroke={
                    {
                      "payload": 4294967295,
                      "type": 0,
                    }
                  }
                  strokeDasharray={null}
                  strokeDashoffset={null}
                  strokeLinecap={1}
                  strokeLinejoin={1}
                  strokeWidth={2}
                />
              </RNSVGGroup>
            </RNSVGSvgView>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Test List Item Components - Experimental Enabled  ListItemRadioWithAmount Snapshot 2`] = `
<View
  accessibilityLabel="label € 1.000,00 "
  accessibilityRole="radio"
  accessibilityState={
    {
      "busy": undefined,
      "checked": false,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onTouchEnd={[Function]}
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {
          "backgroundColor": "rgba(244, 245, 248, 0)",
        },
      }
    }
    jestInlineStyle={
      [
        {
          "marginHorizontal": -24,
          "paddingHorizontal": 24,
          "paddingVertical": 12,
        },
      ]
    }
    style={
      [
        {
          "marginHorizontal": -24,
          "paddingHorizontal": 24,
          "paddingVertical": 12,
        },
        {
          "backgroundColor": "rgba(244, 245, 248, 0)",
        },
      ]
    }
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        }
      }
      jestInlineStyle={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
          {
            "columnGap": 12,
          },
        ]
      }
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
          {
            "columnGap": 12,
          },
          {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <View
        style={
          {
            "flexShrink": 1,
          }
        }
      >
        <Text
          allowFontScaling={true}
          dynamicTypeRamp="headline"
          maxFontSizeMultiplier={1.5}
          numberOfLines={1}
          style={
            [
              {},
              {
                "color": "#0E0F13",
                "fontFamily": "Titillio",
                "fontSize": 16,
                "fontStyle": "normal",
                "fontWeight": "600",
                "lineHeight": 24,
              },
            ]
          }
        >
          label
        </Text>
      </View>
      <View
        accessibilityElementsHidden={true}
        importantForAccessibility="no-hide-descendants"
        pointerEvents="none"
        style={
          {
            "display": "flex",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <Text
          allowFontScaling={true}
          dynamicTypeRamp="headline"
          maxFontSizeMultiplier={1.5}
          style={
            [
              {},
              {
                "color": "#0B3EE3",
                "fontFamily": "Titillio",
                "fontSize": 16,
                "fontStyle": "normal",
                "fontWeight": "600",
                "lineHeight": 24,
              },
            ]
          }
        >
          € 1.000,00
        </Text>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={false}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "height": 24,
              "width": 24,
            }
          }
          testID="AnimatedRadioInput"
        >
          <View
            style={
              [
                {
                  "borderWidth": 2,
                  "left": 0,
                  "position": "absolute",
                  "top": 0,
                },
                {
                  "borderRadius": 12,
                  "height": 24,
                  "width": 24,
                },
                {
                  "borderColor": "#636B82",
                },
              ]
            }
          />
          <View
            collapsable={false}
            jestAnimatedProps={
              {
                "value": {},
              }
            }
            jestAnimatedStyle={
              {
                "value": {
                  "opacity": 0,
                  "transform": [
                    {
                      "scale": 0.5,
                    },
                  ],
                },
              }
            }
            jestInlineStyle={
              [
                {
                  "left": 0,
                  "position": "absolute",
                  "top": 0,
                },
                {
                  "borderRadius": 12,
                  "height": 24,
                  "width": 24,
                },
                {
                  "backgroundColor": "#0B3EE3",
                },
              ]
            }
            style={
              [
                {
                  "left": 0,
                  "position": "absolute",
                  "top": 0,
                },
                {
                  "borderRadius": 12,
                  "height": 24,
                  "width": 24,
                },
                {
                  "backgroundColor": "#0B3EE3",
                },
                {
                  "opacity": 0,
                  "transform": [
                    {
                      "scale": 0.5,
                    },
                  ],
                },
              ]
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Test List Item Components - Experimental Enabled  ListItemTransaction Snapshot 1`] = `
<View
  accessibilityState={
    {
      "busy": true,
    }
  }
  accessible={true}
  style={
    {
      "marginHorizontal": -24,
      "paddingHorizontal": 24,
      "paddingVertical": 12,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <View
      style={
        {
          "marginRight": 12,
        }
      }
    >
      <View
        collapsable={false}
        jestAnimatedProps={
          {
            "value": {},
          }
        }
        jestAnimatedStyle={
          {
            "value": {},
          }
        }
        jestInlineStyle={
          [
            {
              "backgroundColor": "#E8EBF1",
              "borderCurve": "continuous",
              "borderRadius": 8,
              "height": 44,
              "width": 44,
            },
            {
              "animationDuration": "1250ms",
              "animationIterationCount": "infinite",
              "animationName": {
                "0%, 100%": {
                  "opacity": 0.75,
                },
                "50%": {
                  "opacity": 0.35,
                },
              },
              "animationTimingFunction": CubicBezierEasing {
                "x1": 0.37,
                "x2": 0.63,
                "y1": 0,
                "y2": 1,
              },
            },
          ]
        }
        style={
          [
            {
              "backgroundColor": "#E8EBF1",
              "borderCurve": "continuous",
              "borderRadius": 8,
              "height": 44,
              "width": 44,
            },
            {},
          ]
        }
      />
    </View>
    <View
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "flexGrow": 1,
          "gap": 4,
        }
      }
    >
      <View
        collapsable={false}
        jestAnimatedProps={
          {
            "value": {},
          }
        }
        jestAnimatedStyle={
          {
            "value": {},
          }
        }
        jestInlineStyle={
          [
            {
              "backgroundColor": "#E8EBF1",
              "borderCurve": "continuous",
              "borderRadius": 8,
              "height": 16,
              "width": 62,
            },
            {
              "animationDuration": "1250ms",
              "animationIterationCount": "infinite",
              "animationName": {
                "0%, 100%": {
                  "opacity": 0.75,
                },
                "50%": {
                  "opacity": 0.35,
                },
              },
              "animationTimingFunction": CubicBezierEasing {
                "x1": 0.37,
                "x2": 0.63,
                "y1": 0,
                "y2": 1,
              },
            },
          ]
        }
        style={
          [
            {
              "backgroundColor": "#E8EBF1",
              "borderCurve": "continuous",
              "borderRadius": 8,
              "height": 16,
              "width": 62,
            },
            {},
          ]
        }
      />
      <View
        collapsable={false}
        jestAnimatedProps={
          {
            "value": {},
          }
        }
        jestAnimatedStyle={
          {
            "value": {},
          }
        }
        jestInlineStyle={
          [
            {
              "backgroundColor": "#E8EBF1",
              "borderCurve": "continuous",
              "borderRadius": 8,
              "height": 16,
              "width": 107,
            },
            {
              "animationDuration": "1250ms",
              "animationIterationCount": "infinite",
              "animationName": {
                "0%, 100%": {
                  "opacity": 0.75,
                },
                "50%": {
                  "opacity": 0.35,
                },
              },
              "animationTimingFunction": CubicBezierEasing {
                "x1": 0.37,
                "x2": 0.63,
                "y1": 0,
                "y2": 1,
              },
            },
          ]
        }
        style={
          [
            {
              "backgroundColor": "#E8EBF1",
              "borderCurve": "continuous",
              "borderRadius": 8,
              "height": 16,
              "width": 107,
            },
            {},
          ]
        }
      />
    </View>
    <View
      style={
        {
          "marginLeft": 12,
        }
      }
    >
      <View
        collapsable={false}
        jestAnimatedProps={
          {
            "value": {},
          }
        }
        jestAnimatedStyle={
          {
            "value": {},
          }
        }
        jestInlineStyle={
          [
            {
              "backgroundColor": "#E8EBF1",
              "borderCurve": "continuous",
              "borderRadius": 8,
              "height": 24,
              "width": 70,
            },
            {
              "animationDuration": "1250ms",
              "animationIterationCount": "infinite",
              "animationName": {
                "0%, 100%": {
                  "opacity": 0.75,
                },
                "50%": {
                  "opacity": 0.35,
                },
              },
              "animationTimingFunction": CubicBezierEasing {
                "x1": 0.37,
                "x2": 0.63,
                "y1": 0,
                "y2": 1,
              },
            },
          ]
        }
        style={
          [
            {
              "backgroundColor": "#E8EBF1",
              "borderCurve": "continuous",
              "borderRadius": 8,
              "height": 24,
              "width": 70,
            },
            {},
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`Test List Item Components - Experimental Enabled  PressableListItemsBase Snapshot 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onTouchEnd={[Function]}
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {
          "backgroundColor": "rgba(244, 245, 248, 0)",
        },
      }
    }
    jestInlineStyle={
      [
        {
          "marginHorizontal": -24,
          "paddingHorizontal": 24,
          "paddingVertical": 12,
        },
      ]
    }
    style={
      [
        {
          "marginHorizontal": -24,
          "paddingHorizontal": 24,
          "paddingVertical": 12,
        },
        {
          "backgroundColor": "rgba(244, 245, 248, 0)",
        },
      ]
    }
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        }
      }
      jestInlineStyle={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
          {
            "columnGap": 12,
          },
        ]
      }
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
          {
            "columnGap": 12,
          },
          {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`Test List Item Components ListItemAction Snapshot 1`] = `
<View
  accessibilityLabel="accessibilityLabel"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onTouchEnd={[Function]}
>
  <View
    accessibilityElementsHidden={true}
    collapsable={false}
    importantForAccessibility="no-hide-descendants"
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {
          "backgroundColor": "rgba(244, 245, 248, 0)",
        },
      }
    }
    jestInlineStyle={
      [
        {
          "marginHorizontal": -24,
          "paddingHorizontal": 24,
          "paddingVertical": 12,
        },
      ]
    }
    style={
      [
        {
          "marginHorizontal": -24,
          "paddingHorizontal": 24,
          "paddingVertical": 12,
        },
        {
          "backgroundColor": "rgba(244, 245, 248, 0)",
        },
      ]
    }
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        }
      }
      jestInlineStyle={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
          {
            "columnGap": 12,
          },
        ]
      }
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
          {
            "columnGap": 12,
          },
          {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <View
        style={
          {
            "flexGrow": 1,
            "flexShrink": 1,
          }
        }
      >
        <Text
          allowFontScaling={true}
          maxFontSizeMultiplier={1.5}
          style={
            [
              {},
              {
                "color": "#0B3EE3",
                "fontFamily": "Titillio",
                "fontSize": 16,
                "fontStyle": "normal",
                "fontWeight": "600",
                "lineHeight": 20,
              },
            ]
          }
        >
          label
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Test List Item Components ListItemInfo Snapshot 1`] = `
<View
  accessibilityLabel="accessibilityLabel"
  accessible={true}
  style={
    {
      "marginHorizontal": -24,
      "paddingHorizontal": 24,
      "paddingVertical": 12,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        },
        {
          "columnGap": 12,
        },
      ]
    }
  >
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        accessible={false}
        importantForAccessibility="no-hide-descendants"
        style={
          {
            "flexDirection": "column",
          }
        }
      >
        <Text
          allowFontScaling={true}
          dynamicTypeRamp="footnote"
          maxFontSizeMultiplier={1.5}
          style={
            [
              {},
              {
                "color": "#555C70",
                "fontFamily": "Titillio",
                "fontSize": 14,
                "fontStyle": "normal",
                "fontWeight": "400",
                "lineHeight": 21,
              },
            ]
          }
        >
          label
        </Text>
        <Text
          allowFontScaling={true}
          dynamicTypeRamp="headline"
          maxFontSizeMultiplier={1.5}
          numberOfLines={2}
          style={
            [
              {},
              {
                "color": "#0E0F13",
                "fontFamily": "Titillio",
                "fontSize": 16,
                "fontStyle": "normal",
                "fontWeight": "600",
                "lineHeight": 24,
              },
            ]
          }
        >
          testValue
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Test List Item Components ListItemInfoCopy Snapshot 1`] = `
<View
  accessibilityLabel="accessibilityLabel"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onTouchEnd={[Function]}
>
  <View
    accessibilityElementsHidden={true}
    collapsable={false}
    importantForAccessibility="no-hide-descendants"
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {
          "backgroundColor": "rgba(244, 245, 248, 0)",
        },
      }
    }
    jestInlineStyle={
      [
        {
          "marginHorizontal": -24,
          "paddingHorizontal": 24,
          "paddingVertical": 12,
        },
      ]
    }
    style={
      [
        {
          "marginHorizontal": -24,
          "paddingHorizontal": 24,
          "paddingVertical": 12,
        },
        {
          "backgroundColor": "rgba(244, 245, 248, 0)",
        },
      ]
    }
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        }
      }
      jestInlineStyle={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
          {
            "columnGap": 12,
          },
        ]
      }
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
          {
            "columnGap": 12,
          },
          {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <Text
          allowFontScaling={true}
          dynamicTypeRamp="footnote"
          maxFontSizeMultiplier={1.5}
          style={
            [
              {},
              {
                "color": "#555C70",
                "fontFamily": "Titillio",
                "fontSize": 14,
                "fontStyle": "normal",
                "fontWeight": "400",
                "lineHeight": 21,
              },
            ]
          }
        >
          label
        </Text>
        <Text
          allowFontScaling={true}
          dynamicTypeRamp="headline"
          maxFontSizeMultiplier={1.5}
          numberOfLines={2}
          style={
            [
              {},
              {
                "color": "#0B3EE3",
                "fontFamily": "Titillio",
                "fontSize": 16,
                "fontStyle": "normal",
                "fontWeight": "600",
                "lineHeight": 24,
              },
            ]
          }
        >
          testValue
        </Text>
      </View>
      <RNSVGSvgView
        accessibilityElementsHidden={true}
        accessibilityLabel=""
        accessible={false}
        align="xMidYMid"
        bbHeight={24}
        bbWidth={24}
        color="#0B3EE3"
        focusable={false}
        height={24}
        importantForAccessibility="no-hide-descendants"
        meetOrSlice={0}
        minX={0}
        minY={0}
        pointerEvents="none"
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 24,
              "width": 24,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width={24}
      >
        <RNSVGGroup
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
        >
          <RNSVGPath
            clipRule={0}
            d="M12 18h8a2 2 0 0 0 2-2V9h-4a3 3 0 0 1-3-3V2h-3a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2Zm9.332-11.987a2 2 0 0 1 .603.987H18a1 1 0 0 1-1-1V2.227a2 2 0 0 1 .406.281l3.926 3.505ZM14 20h-2a4 4 0 0 1-4-4V6H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2Zm2 0h4a4 4 0 0 0 4-4V7.505a4 4 0 0 0-1.336-2.984l-3.926-3.505A4 4 0 0 0 16.074 0H12a4 4 0 0 0-4 4H4a4 4 0 0 0-4 4v12a4 4 0 0 0 4 4h8a4 4 0 0 0 4-4Z"
            fill={
              {
                "type": 2,
              }
            }
            fillRule={0}
            propList={
              [
                "fill",
                "fillRule",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</View>
`;

exports[`Test List Item Components ListItemNav Snapshot 1`] = `
<View
  accessibilityLabel="accessibilityLabel"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onTouchEnd={[Function]}
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {
          "backgroundColor": "rgba(244, 245, 248, 0)",
        },
      }
    }
    jestInlineStyle={
      [
        {
          "marginHorizontal": -24,
          "paddingHorizontal": 24,
          "paddingVertical": 12,
        },
      ]
    }
    style={
      [
        {
          "marginHorizontal": -24,
          "paddingHorizontal": 24,
          "paddingVertical": 12,
        },
        {
          "backgroundColor": "rgba(244, 245, 248, 0)",
        },
      ]
    }
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        }
      }
      jestInlineStyle={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
        ]
      }
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
          {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <View
        style={
          {
            "flexGrow": 1,
            "flexShrink": 1,
          }
        }
      >
        <Text
          allowFontScaling={true}
          dynamicTypeRamp="headline"
          maxFontSizeMultiplier={1.5}
          style={
            [
              {},
              {
                "color": "#0E0F13",
                "fontFamily": "Titillio",
                "fontSize": 16,
                "fontStyle": "normal",
                "fontWeight": "600",
                "lineHeight": 24,
              },
            ]
          }
        >
          testValue
        </Text>
      </View>
      <RNSVGSvgView
        accessibilityElementsHidden={true}
        accessibilityLabel=""
        accessible={false}
        align="xMidYMid"
        bbHeight={24}
        bbWidth={24}
        color="#0B3EE3"
        focusable={false}
        height={24}
        importantForAccessibility="no-hide-descendants"
        meetOrSlice={0}
        minX={0}
        minY={0}
        pointerEvents="none"
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 24,
              "width": 24,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width={24}
      >
        <RNSVGGroup
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
        >
          <RNSVGPath
            clipRule={0}
            d="M16.2929 5.29289c.3905-.39052 1.0237-.39052 1.4142 0l6 6.00001c.3905.3905.3905 1.0237 0 1.4142l-6 6c-.3905.3905-1.0237.3905-1.4142 0-.3905-.3905-.3905-1.0237 0-1.4142L21.5858 12l-5.2929-5.29289c-.3905-.39053-.3905-1.02369 0-1.41422Z"
            fill={
              {
                "type": 2,
              }
            }
            fillRule={0}
            propList={
              [
                "fill",
                "fillRule",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</View>
`;

exports[`Test List Item Components ListItemNavAlert Snapshot 1`] = `
<View
  accessibilityLabel="accessibilityLabel"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onTouchEnd={[Function]}
>
  <View
    accessibilityElementsHidden={true}
    collapsable={false}
    importantForAccessibility="no-hide-descendants"
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {
          "backgroundColor": "rgba(244, 245, 248, 0)",
        },
      }
    }
    jestInlineStyle={
      [
        {
          "marginHorizontal": -24,
          "paddingHorizontal": 24,
          "paddingVertical": 12,
        },
      ]
    }
    style={
      [
        {
          "marginHorizontal": -24,
          "paddingHorizontal": 24,
          "paddingVertical": 12,
        },
        {
          "backgroundColor": "rgba(244, 245, 248, 0)",
        },
      ]
    }
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        }
      }
      jestInlineStyle={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
          {
            "columnGap": 12,
          },
        ]
      }
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
          {
            "columnGap": 12,
          },
          {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <RNSVGSvgView
        accessibilityElementsHidden={true}
        accessibilityLabel=""
        accessible={false}
        align="xMidYMid"
        bbHeight={24}
        bbWidth={24}
        color="#D13333"
        focusable={false}
        height={24}
        importantForAccessibility="no-hide-descendants"
        meetOrSlice={0}
        minX={0}
        minY={0}
        pointerEvents="none"
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 24,
              "width": 24,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width={24}
      >
        <RNSVGGroup
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
        >
          <RNSVGPath
            clipRule={0}
            d="M7.00702 1c-.73494 0-1.41405.39209-1.78152 1.02856L.2756 11.0274c-.36747.6365-.36747 1.4206 0 2.0571l4.9499 8.8783c.36747.6365 1.04658 1.0286 1.78152 1.0286h9.94288c.7349 0 1.414-.3921 1.7815-1.0286l4.993-8.8783c.3675-.6365.3675-1.4206 0-2.0571l-4.993-8.99884C18.3639 1.39209 17.6848 1 16.9499 1H7.00702Zm5.02608 13.5549c.5676 0 1.0283-.4601 1.0283-1.0277V5.52583c0-.56758-.4601-1.02769-1.0277-1.02769-.5676 0-1.0282.46011-1.0282 1.02769v8.00137c0 .5676.4601 1.0277 1.0276 1.0277Zm0 1.9431c.8436 0 1.5275.6839 1.5275 1.5275 0 .8436-.6839 1.5275-1.5275 1.5275-.8436 0-1.5274-.6839-1.5274-1.5275 0-.8436.6838-1.5275 1.5274-1.5275Z"
            fill={
              {
                "type": 2,
              }
            }
            fillRule={0}
            propList={
              [
                "fill",
                "fillRule",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <Text
          allowFontScaling={true}
          dynamicTypeRamp="headline"
          maxFontSizeMultiplier={1.5}
          style={
            [
              {},
              {
                "color": "#0E0F13",
                "fontFamily": "Titillio",
                "fontSize": 16,
                "fontStyle": "normal",
                "fontWeight": "600",
                "lineHeight": 24,
              },
            ]
          }
        >
          testValue
        </Text>
      </View>
      <RNSVGSvgView
        accessibilityElementsHidden={true}
        accessibilityLabel=""
        accessible={false}
        align="xMidYMid"
        bbHeight={24}
        bbWidth={24}
        color="#0B3EE3"
        focusable={false}
        height={24}
        importantForAccessibility="no-hide-descendants"
        meetOrSlice={0}
        minX={0}
        minY={0}
        pointerEvents="none"
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 24,
              "width": 24,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width={24}
      >
        <RNSVGGroup
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
        >
          <RNSVGPath
            clipRule={0}
            d="M16.2929 5.29289c.3905-.39052 1.0237-.39052 1.4142 0l6 6.00001c.3905.3905.3905 1.0237 0 1.4142l-6 6c-.3905.3905-1.0237.3905-1.4142 0-.3905-.3905-.3905-1.0237 0-1.4142L21.5858 12l-5.2929-5.29289c-.3905-.39053-.3905-1.02369 0-1.41422Z"
            fill={
              {
                "type": 2,
              }
            }
            fillRule={0}
            propList={
              [
                "fill",
                "fillRule",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</View>
`;

exports[`Test List Item Components ListItemRadioWithAmount Snapshot 1`] = `
<View
  accessibilityLabel="label € 1.000,00 suggestReason"
  accessibilityRole="radio"
  accessibilityState={
    {
      "busy": undefined,
      "checked": true,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onTouchEnd={[Function]}
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {
          "backgroundColor": "rgba(244, 245, 248, 0)",
        },
      }
    }
    jestInlineStyle={
      [
        {
          "marginHorizontal": -24,
          "paddingHorizontal": 24,
          "paddingVertical": 12,
        },
      ]
    }
    style={
      [
        {
          "marginHorizontal": -24,
          "paddingHorizontal": 24,
          "paddingVertical": 12,
        },
        {
          "backgroundColor": "rgba(244, 245, 248, 0)",
        },
      ]
    }
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        }
      }
      jestInlineStyle={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
          {
            "columnGap": 12,
          },
        ]
      }
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
          {
            "columnGap": 12,
          },
          {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <View
        style={
          {
            "flexShrink": 1,
          }
        }
      >
        <Text
          allowFontScaling={true}
          dynamicTypeRamp="headline"
          maxFontSizeMultiplier={1.5}
          numberOfLines={1}
          style={
            [
              {},
              {
                "color": "#0E0F13",
                "fontFamily": "Titillio",
                "fontSize": 16,
                "fontStyle": "normal",
                "fontWeight": "600",
                "lineHeight": 24,
              },
            ]
          }
        >
          label
        </Text>
        <View
          style={
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "gap": 4,
            }
          }
        >
          <RNSVGSvgView
            accessibilityElementsHidden={true}
            accessibilityLabel=""
            accessible={false}
            align="xMidYMid"
            bbHeight={16}
            bbWidth={16}
            color="#5517E3"
            focusable={false}
            height={16}
            importantForAccessibility="no-hide-descendants"
            meetOrSlice={0}
            minX={0}
            minY={0}
            pointerEvents="none"
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                {
                  "flex": 0,
                  "height": 16,
                  "width": 16,
                },
              ]
            }
            vbHeight={24}
            vbWidth={24}
            width={16}
          >
            <RNSVGGroup
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGPath
                d="m15.694 7.56-2.296-.656a6.276 6.276 0 0 1-4.337-4.337L8.405.271a.438.438 0 0 0-.81 0l-.656 2.296a6.276 6.276 0 0 1-4.337 4.337L.306 7.56a.421.421 0 0 0 0 .81l2.296.656a6.276 6.276 0 0 1 4.337 4.338l.656 2.295a.42.42 0 0 0 .81 0l.656-2.295a6.276 6.276 0 0 1 4.338-4.338l2.295-.656a.421.421 0 0 0 0-.81ZM23.809 18.719l-1.435-.41a3.922 3.922 0 0 1-2.71-2.711l-.41-1.435a.273.273 0 0 0-.507 0l-.41 1.435a3.923 3.923 0 0 1-2.711 2.71l-1.435.41a.263.263 0 0 0 0 .507l1.435.41a3.922 3.922 0 0 1 2.71 2.711l.41 1.435a.263.263 0 0 0 .507 0l.41-1.435a3.923 3.923 0 0 1 2.711-2.71l1.435-.41a.263.263 0 0 0 0-.507Z"
                fill={
                  {
                    "type": 2,
                  }
                }
                propList={
                  [
                    "fill",
                  ]
                }
              />
            </RNSVGGroup>
          </RNSVGSvgView>
          <Text
            allowFontScaling={true}
            dynamicTypeRamp="footnote"
            maxFontSizeMultiplier={1.5}
            style={
              [
                {},
                {
                  "color": "#5517E3",
                  "fontFamily": "Titillio",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "lineHeight": 21,
                },
              ]
            }
          >
            suggestReason
          </Text>
        </View>
      </View>
      <View
        accessibilityElementsHidden={true}
        importantForAccessibility="no-hide-descendants"
        pointerEvents="none"
        style={
          {
            "display": "flex",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <Text
          allowFontScaling={true}
          dynamicTypeRamp="headline"
          maxFontSizeMultiplier={1.5}
          style={
            [
              {},
              {
                "color": "#0B3EE3",
                "fontFamily": "Titillio",
                "fontSize": 16,
                "fontStyle": "normal",
                "fontWeight": "600",
                "lineHeight": 24,
              },
            ]
          }
        >
          € 1.000,00
        </Text>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={false}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "height": 24,
              "width": 24,
            }
          }
          testID="AnimatedRadioInput"
        >
          <View
            style={
              [
                {
                  "borderWidth": 2,
                  "left": 0,
                  "position": "absolute",
                  "top": 0,
                },
                {
                  "borderRadius": 12,
                  "height": 24,
                  "width": 24,
                },
                {
                  "borderColor": "#636B82",
                },
              ]
            }
          />
          <View
            collapsable={false}
            jestAnimatedProps={
              {
                "value": {},
              }
            }
            jestAnimatedStyle={
              {
                "value": {
                  "opacity": 1,
                  "transform": [
                    {
                      "scale": 1,
                    },
                  ],
                },
              }
            }
            jestInlineStyle={
              [
                {
                  "left": 0,
                  "position": "absolute",
                  "top": 0,
                },
                {
                  "borderRadius": 12,
                  "height": 24,
                  "width": 24,
                },
                {
                  "backgroundColor": "#0B3EE3",
                },
              ]
            }
            style={
              [
                {
                  "left": 0,
                  "position": "absolute",
                  "top": 0,
                },
                {
                  "borderRadius": 12,
                  "height": 24,
                  "width": 24,
                },
                {
                  "backgroundColor": "#0B3EE3",
                },
                {
                  "opacity": 1,
                  "transform": [
                    {
                      "scale": 1,
                    },
                  ],
                },
              ]
            }
          />
          <View>
            <RNSVGSvgView
              align="xMidYMid"
              bbHeight={24}
              bbWidth={24}
              focusable={false}
              height={24}
              meetOrSlice={0}
              minX={0}
              minY={0}
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  {
                    "flex": 0,
                    "height": 24,
                    "width": 24,
                  },
                ]
              }
              vbHeight={24}
              vbWidth={24}
              width={24}
            >
              <RNSVGGroup
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
              >
                <RNSVGPath
                  d="m7 12 4 4 7-7"
                  fill={null}
                  onSvgLayout={[Function]}
                  propList={
                    [
                      "fill",
                      "stroke",
                      "strokeWidth",
                      "strokeDasharray",
                      "strokeDashoffset",
                      "strokeLinecap",
                      "strokeLinejoin",
                    ]
                  }
                  stroke={
                    {
                      "payload": 4294967295,
                      "type": 0,
                    }
                  }
                  strokeDasharray={null}
                  strokeDashoffset={null}
                  strokeLinecap={1}
                  strokeLinejoin={1}
                  strokeWidth={2}
                />
              </RNSVGGroup>
            </RNSVGSvgView>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Test List Item Components ListItemRadioWithAmount Snapshot 2`] = `
<View
  accessibilityLabel="label € 1.000,00 "
  accessibilityRole="radio"
  accessibilityState={
    {
      "busy": undefined,
      "checked": false,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onTouchEnd={[Function]}
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {
          "backgroundColor": "rgba(244, 245, 248, 0)",
        },
      }
    }
    jestInlineStyle={
      [
        {
          "marginHorizontal": -24,
          "paddingHorizontal": 24,
          "paddingVertical": 12,
        },
      ]
    }
    style={
      [
        {
          "marginHorizontal": -24,
          "paddingHorizontal": 24,
          "paddingVertical": 12,
        },
        {
          "backgroundColor": "rgba(244, 245, 248, 0)",
        },
      ]
    }
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        }
      }
      jestInlineStyle={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
          {
            "columnGap": 12,
          },
        ]
      }
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
          {
            "columnGap": 12,
          },
          {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <View
        style={
          {
            "flexShrink": 1,
          }
        }
      >
        <Text
          allowFontScaling={true}
          dynamicTypeRamp="headline"
          maxFontSizeMultiplier={1.5}
          numberOfLines={1}
          style={
            [
              {},
              {
                "color": "#0E0F13",
                "fontFamily": "Titillio",
                "fontSize": 16,
                "fontStyle": "normal",
                "fontWeight": "600",
                "lineHeight": 24,
              },
            ]
          }
        >
          label
        </Text>
      </View>
      <View
        accessibilityElementsHidden={true}
        importantForAccessibility="no-hide-descendants"
        pointerEvents="none"
        style={
          {
            "display": "flex",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <Text
          allowFontScaling={true}
          dynamicTypeRamp="headline"
          maxFontSizeMultiplier={1.5}
          style={
            [
              {},
              {
                "color": "#0B3EE3",
                "fontFamily": "Titillio",
                "fontSize": 16,
                "fontStyle": "normal",
                "fontWeight": "600",
                "lineHeight": 24,
              },
            ]
          }
        >
          € 1.000,00
        </Text>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={false}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "height": 24,
              "width": 24,
            }
          }
          testID="AnimatedRadioInput"
        >
          <View
            style={
              [
                {
                  "borderWidth": 2,
                  "left": 0,
                  "position": "absolute",
                  "top": 0,
                },
                {
                  "borderRadius": 12,
                  "height": 24,
                  "width": 24,
                },
                {
                  "borderColor": "#636B82",
                },
              ]
            }
          />
          <View
            collapsable={false}
            jestAnimatedProps={
              {
                "value": {},
              }
            }
            jestAnimatedStyle={
              {
                "value": {
                  "opacity": 0,
                  "transform": [
                    {
                      "scale": 0.5,
                    },
                  ],
                },
              }
            }
            jestInlineStyle={
              [
                {
                  "left": 0,
                  "position": "absolute",
                  "top": 0,
                },
                {
                  "borderRadius": 12,
                  "height": 24,
                  "width": 24,
                },
                {
                  "backgroundColor": "#0B3EE3",
                },
              ]
            }
            style={
              [
                {
                  "left": 0,
                  "position": "absolute",
                  "top": 0,
                },
                {
                  "borderRadius": 12,
                  "height": 24,
                  "width": 24,
                },
                {
                  "backgroundColor": "#0B3EE3",
                },
                {
                  "opacity": 0,
                  "transform": [
                    {
                      "scale": 0.5,
                    },
                  ],
                },
              ]
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Test List Item Components ListItemTransaction Snapshot 1`] = `
<View
  accessibilityState={
    {
      "busy": true,
    }
  }
  accessible={true}
  style={
    {
      "marginHorizontal": -24,
      "paddingHorizontal": 24,
      "paddingVertical": 12,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <View
      style={
        {
          "marginRight": 12,
        }
      }
    >
      <View
        collapsable={false}
        jestAnimatedProps={
          {
            "value": {},
          }
        }
        jestAnimatedStyle={
          {
            "value": {},
          }
        }
        jestInlineStyle={
          [
            {
              "backgroundColor": "#E8EBF1",
              "borderCurve": "continuous",
              "borderRadius": 8,
              "height": 44,
              "width": 44,
            },
            {
              "animationDuration": "1250ms",
              "animationIterationCount": "infinite",
              "animationName": {
                "0%, 100%": {
                  "opacity": 0.75,
                },
                "50%": {
                  "opacity": 0.35,
                },
              },
              "animationTimingFunction": CubicBezierEasing {
                "x1": 0.37,
                "x2": 0.63,
                "y1": 0,
                "y2": 1,
              },
            },
          ]
        }
        style={
          [
            {
              "backgroundColor": "#E8EBF1",
              "borderCurve": "continuous",
              "borderRadius": 8,
              "height": 44,
              "width": 44,
            },
            {},
          ]
        }
      />
    </View>
    <View
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "flexGrow": 1,
          "gap": 4,
        }
      }
    >
      <View
        collapsable={false}
        jestAnimatedProps={
          {
            "value": {},
          }
        }
        jestAnimatedStyle={
          {
            "value": {},
          }
        }
        jestInlineStyle={
          [
            {
              "backgroundColor": "#E8EBF1",
              "borderCurve": "continuous",
              "borderRadius": 8,
              "height": 16,
              "width": 62,
            },
            {
              "animationDuration": "1250ms",
              "animationIterationCount": "infinite",
              "animationName": {
                "0%, 100%": {
                  "opacity": 0.75,
                },
                "50%": {
                  "opacity": 0.35,
                },
              },
              "animationTimingFunction": CubicBezierEasing {
                "x1": 0.37,
                "x2": 0.63,
                "y1": 0,
                "y2": 1,
              },
            },
          ]
        }
        style={
          [
            {
              "backgroundColor": "#E8EBF1",
              "borderCurve": "continuous",
              "borderRadius": 8,
              "height": 16,
              "width": 62,
            },
            {},
          ]
        }
      />
      <View
        collapsable={false}
        jestAnimatedProps={
          {
            "value": {},
          }
        }
        jestAnimatedStyle={
          {
            "value": {},
          }
        }
        jestInlineStyle={
          [
            {
              "backgroundColor": "#E8EBF1",
              "borderCurve": "continuous",
              "borderRadius": 8,
              "height": 16,
              "width": 107,
            },
            {
              "animationDuration": "1250ms",
              "animationIterationCount": "infinite",
              "animationName": {
                "0%, 100%": {
                  "opacity": 0.75,
                },
                "50%": {
                  "opacity": 0.35,
                },
              },
              "animationTimingFunction": CubicBezierEasing {
                "x1": 0.37,
                "x2": 0.63,
                "y1": 0,
                "y2": 1,
              },
            },
          ]
        }
        style={
          [
            {
              "backgroundColor": "#E8EBF1",
              "borderCurve": "continuous",
              "borderRadius": 8,
              "height": 16,
              "width": 107,
            },
            {},
          ]
        }
      />
    </View>
    <View
      style={
        {
          "marginLeft": 12,
        }
      }
    >
      <View
        collapsable={false}
        jestAnimatedProps={
          {
            "value": {},
          }
        }
        jestAnimatedStyle={
          {
            "value": {},
          }
        }
        jestInlineStyle={
          [
            {
              "backgroundColor": "#E8EBF1",
              "borderCurve": "continuous",
              "borderRadius": 8,
              "height": 24,
              "width": 70,
            },
            {
              "animationDuration": "1250ms",
              "animationIterationCount": "infinite",
              "animationName": {
                "0%, 100%": {
                  "opacity": 0.75,
                },
                "50%": {
                  "opacity": 0.35,
                },
              },
              "animationTimingFunction": CubicBezierEasing {
                "x1": 0.37,
                "x2": 0.63,
                "y1": 0,
                "y2": 1,
              },
            },
          ]
        }
        style={
          [
            {
              "backgroundColor": "#E8EBF1",
              "borderCurve": "continuous",
              "borderRadius": 8,
              "height": 24,
              "width": 70,
            },
            {},
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`Test List Item Components PressableListItemsBase Snapshot 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onTouchEnd={[Function]}
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {
          "backgroundColor": "rgba(244, 245, 248, 0)",
        },
      }
    }
    jestInlineStyle={
      [
        {
          "marginHorizontal": -24,
          "paddingHorizontal": 24,
          "paddingVertical": 12,
        },
      ]
    }
    style={
      [
        {
          "marginHorizontal": -24,
          "paddingHorizontal": 24,
          "paddingVertical": 12,
        },
        {
          "backgroundColor": "rgba(244, 245, 248, 0)",
        },
      ]
    }
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        }
      }
      jestInlineStyle={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
          {
            "columnGap": 12,
          },
        ]
      }
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
          {
            "columnGap": 12,
          },
          {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    />
  </View>
</View>
`;
